Update configuration of queryables, sortables (#943)
* update configuration of queryables, sortables

* cleanup, prepare query parameter updates

* fix tests

* Text Search: make comparison case insensitive

Closes #872

* cleanup unused code

* cleanup

* resolve PMD warnings

* queryables and sortables schemas from provider

* Update xtraplatform.gradle

---------

Co-authored-by: Andreas Zahnen <zahnen@interactive-instruments.de>